Removed redundant jvm args